@@ -103,7 +103,7 @@ FLEXLINK=flexlink -x64 -merge-manifest
 FLEXDIR=$(shell $(FLEXLINK) -where)
 IFLEXDIR=-I"$(FLEXDIR)"
 MKDLL=$(FLEXLINK)
-MKEXE=$(FLEXLINK) -exe
+MKEXE=$(FLEXLINK) -exe -link /STACK:33554432
 MKMAINDLL=$(FLEXLINK) -maindll
 
 ### How to build a static library
